:books: docs: updated swagger files and added README.md
